fixed some layout issue, now login screen also uses the layout.

--- a/resource/war/theme/corporate/style/content.css
+++ b/resource/war/theme/corporate/style/content.css
@@ -65,3 +65,7 @@
 	line-height: 5;
 	text-align: end;
 }
+.fui-header-container {
+    background: transparent url(../image/header_background.jpg) 2px 0.1em no-repeat;
+    height: 100%;
+}
